<resources>
    <string name="first_app_name">English</string>
    <string name="last_app_name">Lexicon</string>
    <string name="app_name">English Lexicon</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=com.myapp.lexicon&amp;hl=ru</string>
    <string name="admob_app_id">ca-app-pub-1615119435047194~1180910418</string>
    <string name="main_bottom_banner">ca-app-pub-1615119435047194/3932386208</string>
    <string name="add_word_bottom_banner">ca-app-pub-1615119435047194/4096037737</string>
    <string name="word_editor_bottom_banner">ca-app-pub-1615119435047194/2399812684</string>
    <string name="play_list_banner">ca-app-pub-1615119435047194/2457004070</string>
    <string name="tests_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="add_word_interstitial_ad">ca-app-pub-1615119435047194/9744059008</string>
    <string name="main_interstitial_ad">ca-app-pub-1615119435047194/4664150389</string>
    <string name="test_interstitial_ad">ca-app-pub-3940256099942544/1033173712</string>
    <string name="appodeal_app_key" translatable="false">10021219a5e916ec6f9e534d8614339dc30d2e44a5bf0018</string>
    <string name="currency_converter_api_key" translatable="false">pZHtOb0uFiDxwuW4bnLIOITh9bCtqqQkHBq4NzQp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_word">Добавить слово</string>
    <string name="add_dict">Добавить словарь</string>
    <string name="edit_word">Изменить слово</string>
    <string name="check_your_self">Проверь знания</string>
    <string name="exit">Выход</string>
    <string name="title_activity_add_word">Добавить слово</string>
    <string name="title_activity_check_self">Тесты</string>
    <string name="title_activity_word_editor">Редактор слов</string>
    <string name="title_activity_play_list">Список обучения</string>
    <string name="delete_dict">Удалить словарь</string>
    <string name="spinner_order_play_header">Порядок обучения:</string>
    <string name="play_list_header">Список обучения:</string>
    <string name="add">Добавить</string>
    <string name="access_dict">Доступные словари</string>
    <string name="no_playlist">Не задан список обучения</string>
    <string name="message_about_pause">Пауза</string>
    <string name="message_about_start">Подождите немного сейчас начнем</string>
    <string name="title_del_dict">Выберите словари</string>
    <string name="button_text_delete">Удалить</string>
    <string name="button_text_cancel">Отмена</string>
    <string name="button_text_yes">Да</string>
    <string name="button_text_no">Нет</string>
    <string name="msg_selected_dict_removed">Выбранные словари удалены!</string>
    <string name="dialog_are_you_sure">Вы уверены?</string>
    <string name="nav_play_list">Список обучения</string>
    <string name="text_enter">Введите текст</string>
    <string name="text_result">Результат</string>
    <string name="link_to_yandex_trans">Переведено сервисом <![CDATA[<u>«Яндекс.Переводчик»</u>]]></string>
    <string name="link_to_yandex_trans_2">Переведено сервисом «Яндекс.Переводчик»</string>
    <string name="translate_yandex_ru">https://translate.yandex.ru</string>
    <string name="msg_not_internet">Нет соединения с интернетом. Онлайн перевод недоступен</string>
    <string name="btn_translate_text">Перевести</string>
    <string name="add_to_dict">Добавить в словарь</string>
    <string name="text_add">Добавить</string>
    <string name="new_word_is_added">" добавлено новое слово"</string>
    <string name="in_dictionary">"В словарь "</string>
    <string name="label_english">English</string>
    <string name="label_russian">Русский</string>
    <string name="label_count_repeat">Количество повторов</string>
    <string name="label_copy">Копировать</string>
    <string name="msg_wrong_text">В одном из полей ввода текст не соответствует языку</string>
    <string name="text_excellent">Отлично</string>
    <string name="text_good">Хорошо</string>
    <string name="text_bad">Плохо</string>
    <string name="text_out_of">" из "</string>
    <string name="message_inst_tts_data">На Вашем устройстве отсутствует поддержка английского(США) языка. Что бы исправить это необходимо установить голосовые функции для английского(США) языка</string>
    <string name="message_inst_tts_data_ru">На Вашем устройстве отсутствует поддержка русского(РФ) языка. Что бы исправить это необходимо установить голосовые функции для русского(РФ) языка</string>
    <string name="message_inst_tts_engine">На Вашем устройстве отсутствует поддержка синтеза речи. Необходимо перейти в Google Play и установить "Синтезатор речи Google"</string>
    <string name="url_google_tts"><![CDATA[https://play.google.com/store/apps/details?id=com.google.android.tts&hl=ru]]></string>
    <string name="title_new_dictionary">Новый словарь</string>
    <string name="btn_text_add">Добавить</string>
    <string name="btn_text_cancel">Отмена</string>
    <string name="text_set_dict_name">Задайте имя словаря</string>
    <string name="menu_search">Найти</string>
    <string name="dialog_title_confirm_action">Подтвердите ваши действия</string>
    <string name="dialog_msg_delete_word">"Вы действительно хотите удалить слово из словаря - "</string>
    <string name="msg_data_base_error">"Ошибка базы данных - "</string>
    <string name="key_play_order">key_play_order</string>
    <string name="speech_error">Error of speech synthesis</string>
    <string name="is_one_time">is_one_time</string>
    <string name="text_added_new_dict">"Добавлен новый словарь: "</string>
    <string name="btn_text_setup">Установить</string>
    <string name="start_speech_en">Lets start!</string>
    <string name="start_speech_ru">Начнем!</string>
    <string name="dialog_title_warning">Предупреждение:</string>
    <string name="btn_text_continue">Продолжить без</string>
    <string name="nav_words_editor">Редактор слов</string>
    <string name="text_listen_and_click">Послушай и кликни</string>
    <string name="text_one_of_five">1 из 5</string>
    <string name="text_find_pair">Найди пару</string>
    <string name="text_choice_test">Выберите тест</string>
    <string name="text_find_pair_words">Найди парные слова</string>
    <string name="text_recognize_words_by_sight">Распознай слова на слух</string>
    <string name="text_dictionary">Словарь:</string>
    <string name="text_ok">OK</string>
    <string name="text_complete">Завершить</string>
    <string name="text_choose_correctly">Выбери правильно</string>
    <string name="description_sound_button">sound_button</string>
    <string name="text_finish">Завершить</string>
    <string name="text_repeat">Повтор</string>
    <string name="text_next">Следующий</string>
    <string name="text_50_50">50 из 50</string>
    <string name="text_correctly">Верно:</string>
    <string name="text_test_is_finish">Тест завершен</string>
    <string name="descript_image_background">image_background</string>
    <string name="msg_error_creating_database">Не удалось создать базу данных</string>
    <string name="http_error_413">Превышен максимально допустимый размер текста</string>
    <string name="http_error_422">Текст не может быть переведен</string>
    <string name="http_error_501">Заданное направление перевода не поддерживается</string>
    <string name="http_error_401">Неправильный API-ключ</string>
    <string name="http_error_402">API-ключ заблокирован</string>
    <string name="http_error_404">Превышено суточное ограничение на объем переведенного текста</string>
    <string name="title_yandex_translate">Яндекс.Переводчик:</string>
    <string name="menu_text_api_key">Ввести API ключ</string>
    <string name="dialog_error_text_0">Если у Вас есть API-ключ введите его в поле ниже или нажмите кнопку \"Вставить\" если он скопирован, затем нажмите \"Сохранить\".</string>
    <string name="dialog_option_text_0">Если у Вас нет ключа, Вы можете получить бесплатный API-ключ нажав кнопку \"Получить\".</string>
    <string name="tech_yandex_ru_translate">https://tech.yandex.ru/translate/</string>
    <string name="text_api_key">API ключ:</string>
    <string name="text_paste">Вставить</string>
    <string name="text_save">Сохранить</string>
    <string name="text_get">Получить</string>
    <string name="text_cancel">Отмена</string>
    <string name="text_evaluate_app">Оценить приложение</string>
    <string name="text_about_app">О программе</string>
    <string name="content_describt">image_view</string>
    <string name="text_developer_name">Разработка: RenatSayf</string>
    <string name="text_developer_email">E-mail: renatsayf@gmail.com</string>
    <string name="text_evaluate">Оценить</string>
    <string name="you_have_uncompleted_test">У Вас есть незавершенный тест. Вы хотите продолжить проверку или начать тест с начала</string>
    <string name="text_continue">Продолжить</string>
    <string name="text_from_the_beginning">С начала</string>
    <string name="text_not_finished_test">Вы не завершили тест. Сделать закладку, что бы потом продолжить с этого же места?</string>
    <string name="text_speech_settings">Голосовые настройки</string>
    <string name="text_speech_recogniz_not_support">Извените! Распознавание речи не поддерживается на этом устройстве.</string>
    <string name="text_say_something">Говорите…</string>
    <string name="text_voice_input_not_available">Нет соединения с интернетом. Голосовой ввод недоступен</string>
    <string name="text_ru">Ru</string>
    <string name="text_updated_successfully">Словарь успешно обновлен</string>
    <string name="text_write_error">Ошибка записи</string>
    <string name="text_deleting_error">Ошибка удаления</string>
    <string name="header_dialog_change_pl">Исключить словари из списка обучения?</string>
    <string name="title_dialog_warning">Незавершенный тест:</string>
    <string name="text_move_to_dict">Переместить в словарь</string>
    <string name="btn_text_write">Записать</string>
    <string name="btn_text_delete">Удалить</string>
    <string name="text_words">Слов:</string>
    <string name="text_ru_speech_on">Русскоязычное озвучивание включено</string>
    <string name="text_ru_speech_off">Русскоязычное озвучивание отключено</string>
    <string name="app_indexing_name">Английский лексикон</string>
    <string name="app_indexing_text">Учим английские слова и фразы</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notify_content_text">Нажмите, чтобы открыть приложение</string>
    <string name="btn_sound_discribtion">btn_sound</string>
    <string name="text_settings">Настройки</string>
    <string name="summary_service">Показывать очередное слово при каждом разблокировании экрана</string>
    <string name="title_service_group">Когда приложение закрыто</string>
    <string name="title_is_start_speech">Озвучивать при запуске</string>
    <string name="summary_is_start_speech">Озвучивать вступительную фразу при запуске приложения</string>
    <string name="title_display_mode">Показывать слова в режиме:</string>
    <string name="summary_display_mode">Повтор</string>
    <string name="title_service">После разблокирования</string>
    <string name="key_service">service</string>
    <string name="key_list_display_mode">list_display_mode</string>
    <string name="text_share">Поделиться</string>
    <string name="key_show_intervals">show_interval</string>
    <string name="title_show_interval">Показывать слова по таймеру</string>
    <string name="text_disable_ads">Отключить рекламу навсегда за</string>
    <string name="text_get_reward">Получать вознаграждение</string>
    <string name="text_card_number_to_phone">Номер банковской карты привязанной к номеру телефона</string>
    <string name="text_enter_card_number">Введите номер банковской карты</string>
    <string name="text_card_number_hint">0000 0000 0000 0000</string>
</resources>