<?xml version="1.0" encoding="utf-8"?>
<!--suppress DeprecatedClassUsageInspection -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/text_settings"
    >

    <CheckBoxPreference
        android:key="is_start_speech"
        android:title="@string/title_is_start_speech"
        android:summary="@string/summary_is_start_speech"
        android:defaultValue="true"
        />

    <ListPreference
        android:key="@string/key_show_intervals"
        android:title="@string/title_show_interval"
        android:entries="@array/show_intervals"
        android:entryValues="@array/show_intervals_values"
        android:defaultValue="5"
        />

    <PreferenceCategory android:title="@string/title_service_group"
        android:key="service_group">

        <CheckBoxPreference
            android:key="@string/key_service"
            android:title="@string/title_service"
            android:summary="@string/summary_service"
            android:defaultValue="true"
            />

        <ListPreference
            android:key="@string/key_on_unbloking_screen"
            android:title="Показывать слова через:"
            android:summary="Всплывающее окно"
            android:entries="@array/display_variant"
            android:entryValues="@array/display_variant_values"
            android:defaultValue="0" />

        <ListPreference
            android:key="@string/key_list_display_mode"
            android:title="@string/title_display_mode"
            android:summary="@string/summary_display_mode"
            android:entries="@array/display_mode"
            android:entryValues="@array/display_values"
            android:defaultValue="0"
            >

        </ListPreference>
    </PreferenceCategory>


</PreferenceScreen>