<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group >

        <item
            android:id="@+id/nav_user_reward"
            android:icon="@drawable/ic_monetization"
            android:title="@string/text_get_reward"/>

        <item
            android:id="@+id/nav_video_list"
            android:icon="@drawable/ic_video"
            android:title="@string/text_video"
            android:visible="false"
            tools:visible="true"/>

        <item
            android:id="@+id/nav_add_word"
            android:icon="@drawable/ic_add_word"
            android:title="@string/add_word"/>

        <item
            android:id="@+id/nav_delete_dict"
            android:icon="@drawable/icon_delete"
            android:title="@string/delete_dict"/>
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_edit"
            android:title="@string/nav_words_editor"/>
        <item
            android:id="@+id/nav_check_your_self"
            android:icon="@drawable/ic_check_your_self"
            android:title="@string/check_your_self"/>

        <item android:id="@+id/nav_settings"
              android:icon="@drawable/ic_settings"
              android:title="@string/text_settings"/>

        <item
            android:id="@+id/nav_evaluate_app"
            android:icon="@drawable/icon_star_blue"
            android:title="@string/text_evaluate_app"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_blue"
            android:title="@string/text_share"/>

        <item
            android:id="@+id/nav_about_app"
            android:icon="@drawable/icon_info_blue"
            android:title="@string/text_about_app"
            />

    </group>

    <item
        android:id="@+id/nav_exit"
        android:icon="@drawable/icon_power"
        android:title="@string/exit"/>

</menu>