<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.myapp.lexicon.aboutapp.AboutAppFragment"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon_lexicon"
        android:contentDescription="@string/content_describt"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="24sp"
        android:textStyle="normal|bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:text="@string/text_developer_name"
        />

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autoLink="email"
        android:text="@string/text_developer_email"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_evaluate"
        style="@style/Base.Widget.AppCompat.ButtonBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/transparent_background"
        android:drawableTop="@drawable/selector_star_icon"
        android:textColor="@drawable/selector_color_gold_to_white"
        android:text="@string/text_evaluate"
        />


</LinearLayout>
