<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingTop="10dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:background="@drawable/side_nav_bar"
    >

    <TextView
        android:text="@string/text_recognize_words_by_sight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/header_top_panel"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:text="@string/text_dictionary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_dict"
        android:layout_marginTop="0dp"
        style="@style/spinner_style"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        >

        <Button
            android:text="@string/text_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:id="@+id/btn_ok"
            android:layout_weight="3"
            android:background="@drawable/text_btn_for_test_green"
            android:minHeight="42dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>

        <Button
            android:text="@string/text_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_complete"
            android:layout_weight="1"
            android:background="@drawable/text_btn_for_test_red"
            android:minHeight="42dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_more_horiz"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="-5dp"
        android:src="@drawable/ic_more_horiz_white"
        android:background="@color/colorTransparent"/>

</LinearLayout>
