<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/color_3B5E91">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_emoji_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/slightly_smiling_face"
        android:textColor="@color/colorBlack"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_emoji_icon_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_emoji_icon"
        app:layout_constraintTop_toTopOf="@id/tv_emoji_icon"
        app:layout_constraintBottom_toBottomOf="@id/tv_emoji_icon"
        app:layout_constraintVertical_bias="1"
        android:text="@string/thumbs_up"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_test_is_finish"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_result_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_emoji_icon"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp">

        <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/text_result"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_result_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/text_excellent"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_result_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_result_status"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/text_correctly"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_result_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/text_50_50"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_result_value"
        android:gravity="center"
        android:layout_marginTop="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/text_next"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:includeFontPadding="false"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_repeat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/text_repeat"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:includeFontPadding="false"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_complete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="end"
            android:text="@string/text_complete"
            android:textColor="@color/color_D3CC26"
            android:textSize="16sp"
            android:textStyle="bold"
            android:includeFontPadding="false"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>