<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/side_nav_bar">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnYes"
        android:text="@string/text_disable_ads"
        android:padding="30dp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnYes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleTV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnNo"
        android:background="@drawable/btn_back_green"
        android:padding="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="30dp"
        android:text="@string/button_text_yes"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnYes"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_back_orange"
        android:padding="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_text_cancel"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>